--- a/automations.yaml
+++ b/automations.yaml
@@ -2851,7 +2851,7 @@
     event: start
   - platform: state
     entity_id:
-    - light.s3box_chambre_lcd_backlight
+    - light.esp32_s3_box_3_5a9f28_screen
     attribute: brightness
   - platform: state
     entity_id:
@@ -2880,21 +2880,20 @@
             entity_id: binary_sensor.capteur_presence_chambre_occupancy
             state: 'on'
       sequence:
-      - service: light.turn_on
-        metadata: {}
+      - metadata: {}
         data:
           brightness_pct: 100
+        action: light.turn_on
         target:
-          entity_id:
-          - light.s3box_chambre_lcd_backlight
+          entity_id: light.esp32_s3_box_3_5a9f28_screen
     default:
-    - service: light.turn_on
-      metadata: {}
+    - metadata: {}
       data:
         brightness_pct: 20
       target:
         entity_id:
-        - light.s3box_chambre_lcd_backlight
+        - light.esp32_s3_box_3_5a9f28_screen
+      action: light.turn_on
   mode: queued
   max: 10
 - id: '1713855798081'
@@ -3832,20 +3831,4 @@
       - {}
       - media_content_type: app
         media_content_id: media-source://media_source
-  mode: single
-- id: '1722438455205'
-  alias: Nouvelle automatisation
-  description: ''
-  trigger:
-  - event_data:
-      actionID: 97294FED-F7EE-47DD-9255-35C9A4E08D50
-    event_type: ios.action_fired
-    platform: event
-  condition: []
-  action:
-  - service: light.toggle
-    metadata: {}
-    data: {}
-    target:
-      area_id: bureau
   mode: single
