--- a/packages/media_center/media_player_universal_media_center.yaml
+++ b/packages/media_center/media_player_universal_media_center.yaml
@@ -7,13 +7,16 @@ media_player:
       - media_player.tv_cast
       - media_player.philips_android_tv
       - media_player.kef
+      - media_player.apple_tv_salon
     active_child_template: |
-      {% if is_state_attr('media_player.tv_cast', 'app_name', 'Netflix') %}
-      media_player.philips_android_tv
+      {% if is_state_attr('media_player.philips_android_tv', 'hdmi_input', 'HW2') %}
+        media_player.apple_tv_salon
+      {% elif is_state_attr('media_player.tv_cast', 'app_name', 'Netflix') %}
+        media_player.philips_android_tv
       {% elif not is_state('media_player.tv_cast', 'off') %}
-      media_player.tv_cast
+        media_player.tv_cast
       {% else %}
-      media_player.philips_android_tv
+        media_player.philips_android_tv
       {% endif %}
     # active_child_template: |
     #   {% if not is_state('media_player.tv_cast', 'off') %}
@@ -55,5 +58,15 @@ media_player:
     attributes:
       is_volume_muted: media_player.kef|is_volume_muted
       volume_level: media_player.kef|volume_level
-      source_list: media_player.philips_android_tv|source_list
-      source: media_player.philips_android_tv|source
+      source_list: |
+        {% if is_state_attr('media_player.philips_android_tv', 'hdmi_input', 'HW2') %}
+          media_player.apple_tv_salon|source_list
+        {% else %}
+          media_player.philips_android_tv|source_list
+        {% endif %}
+      source: |
+        {% if is_state_attr('media_player.philips_android_tv', 'hdmi_input', 'HW2') %}
+          media_player.apple_tv_salon|source
+        {% else %}
+          media_player.philips_android_tv|source
+        {% endif %}
